# middleware/contact-validator.js
@@ -1,0 +1,26 @@
+const validator = require('../helpers/validate');
+
+const saveData = (req, res, next) => {
+    const validationRule = {
+      firstName: 'required|string',
+      lastName: 'required|string',
+      email: 'required|email',
+      favoriteColor: 'required|string',
+      birthday: 'string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+      if (!status) {
+        res.status(412).send({
+          success: false,
+          message: 'Validation failed',
+          data: err
+        });
+      } else {
+        next();
+      }
+    });
+  };
+
+module.exports = {
+    saveData
+}
